HTBHF-926 rename claim response to claim result DTO. Refactor claim builder to new method
