# swagger.yml
@@ -37,7 +37,7 @@ paths:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/ClaimResponse"
+            $ref: "#/definitions/ClaimResultDTO"
         201:
           description: "Created"
         400:
@@ -90,7 +90,7 @@ definitions:
     title: "ClaimDTO"
     description: "A claim (application) for help to buy healthy foods. Contains all\
       \ details that need to be persisted as part of the application."
-  ClaimResponse:
+  ClaimResultDTO:
     type: "object"
     properties:
       claimStatus:
@@ -114,7 +114,7 @@ definitions:
         - "DUPLICATE"
       voucherEntitlement:
         $ref: "#/definitions/VoucherEntitlementDTO"
-    title: "ClaimResponse"
+    title: "ClaimResultDTO"
   ClaimantDTO:
     type: "object"
     properties:
